PROJECT(xlist)
cmake_minimum_required(VERSION 2.8)
SET(SRC_DIR ./)
SET(SRC_LIST
	xlist.c
)

INCLUDE_DIRECTORIES(./)
IF(APPLE)
set(CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
ENDIF(APPLE)
ADD_LIBRARY(xlist SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(xlist PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(xlist PROPERTIES SUFFIX .so)

